// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseGherkin parse basic feature file into an AST 1`] = `
Array [
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 1,
    },
    "name": "Minimal",
    "tags": Array [],
    "type": "feature",
  },
  Object {
    "description": null,
    "keyword": "Scenario",
    "location": Object {
      "column": 5,
      "line": 2,
    },
    "name": "minimalistic",
    "tags": Array [],
    "type": "scenario",
  },
  Object {
    "keyword": "Given ",
    "location": Object {
      "column": 9,
      "line": 3,
    },
    "text": "the minimalism",
    "type": "step",
  },
  Object {
    "keyword": "When ",
    "location": Object {
      "column": 9,
      "line": 4,
    },
    "text": "you change nothing",
    "type": "step",
  },
  Object {
    "keyword": "Then ",
    "location": Object {
      "column": 9,
      "line": 5,
    },
    "text": "it's still small",
    "type": "step",
  },
]
`;

exports[`parseGherkin parse feature file with data tables into an AST 1`] = `
Array [
  Object {
    "description": "  As an API client I can request my api",
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 2,
    },
    "name": "Title of feature",
    "tags": Array [
      Object {
        "location": Object {
          "column": 1,
          "line": 1,
        },
        "name": "@tag",
      },
    ],
    "type": "feature",
  },
  Object {
    "location": Object {
      "column": 1,
      "line": 6,
    },
    "text": "  #Comment",
    "type": "comment",
  },
  Object {
    "description": null,
    "keyword": "Scenario",
    "location": Object {
      "column": 3,
      "line": 7,
    },
    "name": "Query on API, with success response",
    "tags": Array [],
    "type": "scenario",
  },
  Object {
    "keyword": "Given ",
    "location": Object {
      "column": 5,
      "line": 9,
    },
    "text": "I load test data files",
    "type": "step",
  },
  Object {
    "location": Object {
      "column": 7,
      "line": 10,
    },
    "rows": Array [
      Object {
        "cells": Array [
          Object {
            "location": Object {
              "column": 9,
              "line": 10,
            },
            "maxLength": 22,
            "type": "cell",
            "value": "path",
          },
          Object {
            "location": Object {
              "column": 34,
              "line": 10,
            },
            "maxLength": 5,
            "type": "cell",
            "value": "type",
          },
        ],
        "location": Object {
          "column": 7,
          "line": 10,
        },
        "type": "row",
      },
      Object {
        "cells": Array [
          Object {
            "location": Object {
              "column": 9,
              "line": 11,
            },
            "maxLength": 22,
            "type": "cell",
            "value": "data/mocks/data.json",
          },
          Object {
            "location": Object {
              "column": 34,
              "line": 11,
            },
            "maxLength": 5,
            "type": "cell",
            "value": "mocks",
          },
        ],
        "location": Object {
          "column": 7,
          "line": 11,
        },
        "type": "row",
      },
      Object {
        "cells": Array [
          Object {
            "location": Object {
              "column": 9,
              "line": 12,
            },
            "maxLength": 22,
            "type": "cell",
            "value": "data/redis/tokens.json",
          },
          Object {
            "location": Object {
              "column": 34,
              "line": 12,
            },
            "maxLength": 5,
            "type": "cell",
            "value": "redis",
          },
        ],
        "location": Object {
          "column": 7,
          "line": 12,
        },
        "type": "row",
      },
    ],
    "type": "dataTable",
  },
  Object {
    "keyword": "When ",
    "location": Object {
      "column": 5,
      "line": 13,
    },
    "text": "I GET /api/v2/route",
    "type": "step",
  },
]
`;

exports[`parseGherkin should parse comments 1`] = `
Array [
  Object {
    "location": Object {
      "column": 1,
      "line": 1,
    },
    "text": "# Some comment",
    "type": "comment",
  },
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 2,
    },
    "name": "Lorem ipsum dolor sit amet",
    "tags": Array [],
    "type": "feature",
  },
  Object {
    "location": Object {
      "column": 1,
      "line": 4,
    },
    "text": "  # Another one",
    "type": "comment",
  },
  Object {
    "description": null,
    "keyword": "Scenario",
    "location": Object {
      "column": 3,
      "line": 5,
    },
    "name": "foo",
    "tags": Array [],
    "type": "scenario",
  },
]
`;

exports[`parseGherkin should parse tags on Feature 1`] = `
Array [
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 2,
    },
    "name": "baz",
    "tags": Array [
      Object {
        "location": Object {
          "column": 1,
          "line": 1,
        },
        "name": "@foo",
      },
      Object {
        "location": Object {
          "column": 6,
          "line": 1,
        },
        "name": "@bar",
      },
    ],
    "type": "feature",
  },
]
`;

exports[`parseGherkin should parse tags on Scenario 1`] = `
Array [
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 1,
    },
    "name": "some feature",
    "tags": Array [],
    "type": "feature",
  },
  Object {
    "description": null,
    "keyword": "Scenario",
    "location": Object {
      "column": 3,
      "line": 3,
    },
    "name": "some scenario",
    "tags": Array [
      Object {
        "location": Object {
          "column": 3,
          "line": 2,
        },
        "name": "@foo",
      },
      Object {
        "location": Object {
          "column": 8,
          "line": 2,
        },
        "name": "@bar",
      },
    ],
    "type": "scenario",
  },
]
`;
